--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -7,5 +7,11 @@ tt {
   white-space: pre-wrap;
   color: #00FF00;
   line-height: 70%;
+  text-align: center;
 }
+
+body {
+  background: #aaaaaa;
+}
+
 </style>
