--- a/_includes/custom-head.html
+++ b/_includes/custom-head.html
@@ -5,13 +5,13 @@
 tt {
   font-family: 'Ubuntu Mono';
   white-space: pre-wrap;
-  color: #00FF00;
+  color: #FF00AA;
   line-height: 70%;
   text-align: center;
 }
 
 body {
-  background: #aaaaaa;
+  background: #fefefe;
 }
 
 </style>
