--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="site-header" style="background:#FF00AA">
+<header class="site-header" style="background:#FF00AA;color:white;">
 
   <div class="wrapper">
     {%- assign default_paths = site.pages | map: "path" -%}
